# image-search

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: caption.rs  lib.rs  main.rs  ocr.rs  preprocessing.rs  translation.rs
tests/: image_indexer_tests.rs
